# definite-mcp

./: .env.example  .gitignore  README.md  claude_desktop_config.json  debug_api.py  definite_mcp.py  main.py  pyproject.toml  test_mcp.py
scripts/: debug_api.py  debug_unknown_error.py  improved_error_handling.py  improved_httpx_usage.py  test_actual_error_path.py  test_all.py  test_all_empty_errors.py  test_cube_errors.py  test_empty_error.py  test_empty_error_fix.py  test_exception_strings.py  test_improved_errors.py  test_invalid_integration.py  test_mcp.py  test_new_timeout.py  test_new_timeouts.py  test_real_api.py  test_request_details.py  test_retry.py  test_specific_errors.py  test_sql_errors.py  test_timeout.py  test_timeout_error.py
src/definite_mcp/: __init__.py  __main__.py
