[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "definite-mcp"
version = "0.1.0"
description = "Model Context Protocol server for Definite API - enables SQL and Cube queries"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.2.0",
    "python-dotenv>=1.1.1",
]

[project.scripts]
definite-mcp = "definite_mcp:main"

[project.urls]
Homepage = "https://github.com/definite-app/definite-mcp"
Repository = "https://github.com/definite-app/definite-mcp.git"

[tool.hatch.build.targets.wheel]
packages = ["src/definite_mcp"]
